Fix broken toybox link in ProgressMap

--- a/ProgressMap/index.html
+++ b/ProgressMap/index.html
@@ -26,6 +26,6 @@
 </head>
 <body>
   <h1>📦 GVA Toybox (Mobile Test)</h1>
-  <a href="../index.html">🧪 Launch Toybox Test</a>
+  <a href="/GVA-toybox-mobile-PWA/index.html">🧪 Launch Toybox Test</a>
 </body>
 </html>
