Fix PWA link to Toybox-test - Copy

--- a/ProgressMap/index.html
+++ b/ProgressMap/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
   <h1>📦 GVA Toybox (Mobile Test)</h1>
-  <a href="/GVA-toybox-mobile-PWA/index.html">🧪 Launch Toybox Test</a>
+  <a href="/GVA-toybox-mobile-PWA/Toybox-test%20-%20Copy/index.html">🧪 Launch Toybox Test</a>
+
 </body>
 </html>
