Update: XP logic + continue buttons for Toybox-1

--- a/Toybox-1/index.html
+++ b/Toybox-1/index.html
@@ -93,5 +93,11 @@
       document.body.classList.add('samsung-s6');
     }
   </script>
+  <div id="xp-bar">XP: <span id="xp-value">--</span></div>
+
+  <div id="completion-buttons" style="display: none;">
+    <button onclick="goToNext()">✅ Continue</button>
+    <button onclick="goToMap()">🗺️ Map</button>
+  </div>
 </body>
 </html>
