--- a/Toybox-2/index.html
+++ b/Toybox-2/index.html
@@ -2,96 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <title>GVA Portrait Mobile Lock</title>
-  <link rel="manifest" href="manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <title>🌱 Ground Toybox (Mobile)</title>
+  <link rel="manifest" href="../manifest.json" />
+  <link rel="icon" href="../icon.png" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  
-
-  <div id="game-container">
-    <div id="grid-board">
-      <!-- 6x6 = 36 drop zones -->
-      <div class="cell" data-index="0"></div>
-      <div class="cell" data-index="1"></div>
-      <div class="cell" data-index="2"></div>
-      <div class="cell" data-index="3"></div>
-      <div class="cell" data-index="4"></div>
-      <div class="cell" data-index="5"></div>
-      <div class="cell" data-index="6"></div>
-      <div class="cell" data-index="7"></div>
-      <div class="cell" data-index="8"></div>
-      <div class="cell" data-index="9"></div>
-      <div class="cell" data-index="10"></div>
-      <div class="cell" data-index="11"></div>
-      <div class="cell" data-index="12"></div>
-      <div class="cell" data-index="13"></div>
-      <div class="cell" data-index="14"></div>
-      <div class="cell" data-index="15"></div>
-      <div class="cell" data-index="16"></div>
-      <div class="cell" data-index="17"></div>
-      <div class="cell" data-index="18"></div>
-      <div class="cell" data-index="19"></div>
-      <div class="cell" data-index="20"></div>
-      <div class="cell" data-index="21"></div>
-      <div class="cell" data-index="22"></div>
-      <div class="cell" data-index="23"></div>
-      <div class="cell" data-index="24"></div>
-      <div class="cell" data-index="25"></div>
-      <div class="cell" data-index="26"></div>
-      <div class="cell" data-index="27"></div>
-      <div class="cell" data-index="28"></div>
-      <div class="cell" data-index="29"></div>
-      <div class="cell" data-index="30"></div>
-      <div class="cell" data-index="31"></div>
-      <div class="cell" data-index="32"></div>
-      <div class="cell" data-index="33"></div>
-      <div class="cell" data-index="34"></div>
-      <div class="cell" data-index="35"></div>
-    </div>
-
-    <div id="toolbox">
-      <!-- 12 draggable tools -->
-      <div class="draggable" data-value="1">1</div>
-      <div class="draggable" data-value="2">2</div>
-      <div class="draggable" data-value="3">3</div>
-      <div class="draggable" data-value="4">4</div>
-      <div class="draggable" data-value="5">5</div>
-      <div class="draggable" data-value="6">6</div>
-      <div class="draggable" data-value="7">7</div>
-      <div class="draggable" data-value="8">8</div>
-      <div class="draggable" data-value="9">9</div>
-      <div class="draggable" data-value="10">10</div>
-      <div class="draggable" data-value="11">11</div>
-      <div class="draggable" data-value="12">12</div>
-    </div>
-
-    <div id="result-box" style="display:none;">
-      <h2 id="result-text">✅ You placed all 12 items!</h2>
-      <button id="try-again">Try Again</button>
-    </div>
+  <div id="top-controls">
+    <button onclick="goToMap()">🗺️ Map</button>
+    <button onclick="saveAndExit()">💾 Exit</button>
   </div>
 
+  <h1>🌱 Ground Toybox</h1>
+  <p>Pick 3 essentials. Not everything belongs in the soil.</p>
+
+  <div id="game-area">
+    <div id="dropzone">
+      <div class="slot"></div>
+      <div class="slot"></div>
+      <div class="slot"></div>
+    </div>
+    <div id="ground"></div>
+  </div>
+
+  <div id="toolbox">
+    <img id="seed" src="assets/grow/seed.png" class="draggable" />
+    <img id="water-can" src="assets/grow/water-can.png" class="draggable" />
+    <img id="sun" src="assets/grow/sun.png" class="draggable" />
+    <img id="cola" src="assets/grow/cola.png" class="draggable" />
+    <img id="flatscreen" src="assets/grow/flatscreen.png" class="draggable" />
+  </div>
+
+  <div id="xp-bar">XP: <span id="xp-value">--</span></div>
+
+  <div id="completion-buttons" style="display: none;">
+    <button onclick="goToNext()">✅ Continue</button>
+    <button onclick="saveAndExit()">💾 Exit</button>
+  </div>
+
+  <script src="../playerState.js"></script>
   <script src="game.js"></script>
-  <script>
-    function setAppHeight() {
-      const vh = window.innerHeight * 0.01;
-      document.documentElement.style.setProperty('--vh', `${vh}px`);
-      document.getElementById('game-container').style.height = `${window.innerHeight}px`;
-    }
-
-    setAppHeight();
-    window.addEventListener('resize', setAppHeight);
-
-    window.addEventListener('load', () => {
-      setTimeout(() => window.scrollTo(0, 1), 10);
-    });
-
-    if (/Samsung S6/i.test(navigator.userAgent)) {
-      document.body.classList.add('samsung-s6');
-    }
-  </script>
 </body>
 </html>
