--- a/Toybox-1/index.html
+++ b/Toybox-1/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <title>GVA Portrait Mobile Lock</title>
-  <link rel="manifest" href="manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <title>Toybox 1 – Test Grid</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="../manifest.json">
 </head>
 <body>
-  
+  <div id="xp-bar">XP: <span id="xp-value">--</span></div>
 
   <div id="game-container">
     <div id="grid-board">
@@ -70,34 +69,11 @@
 
     <div id="result-box" style="display:none;">
       <h2 id="result-text">✅ You placed all 12 items!</h2>
-      <button id="try-again">Try Again</button>
+      <button id="btn-continue">Continue to Toybox 2</button>
     </div>
   </div>
 
+  <script src="../playerState.js"></script>
   <script src="game.js"></script>
-  <script>
-    function setAppHeight() {
-      const vh = window.innerHeight * 0.01;
-      document.documentElement.style.setProperty('--vh', `${vh}px`);
-      document.getElementById('game-container').style.height = `${window.innerHeight}px`;
-    }
-
-    setAppHeight();
-    window.addEventListener('resize', setAppHeight);
-
-    window.addEventListener('load', () => {
-      setTimeout(() => window.scrollTo(0, 1), 10);
-    });
-
-    if (/Samsung S6/i.test(navigator.userAgent)) {
-      document.body.classList.add('samsung-s6');
-    }
-  </script>
-  <div id="xp-bar">XP: <span id="xp-value">--</span></div>
-
-  <div id="completion-buttons" style="display: none;">
-    <button onclick="goToNext()">✅ Continue</button>
-    <button onclick="goToMap()">🗺️ Map</button>
-  </div>
 </body>
 </html>
