Your message here

--- a/Toybox-1/index.html
+++ b/Toybox-1/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <title>Toybox 1 – Test Grid</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="manifest" href="../manifest.json">
+  <link rel="manifest" href="../manifest.json" />
 </head>
 <body>
   <div id="xp-bar">XP: <span id="xp-value">--</span></div>
@@ -52,7 +52,6 @@
     </div>
 
     <div id="toolbox">
-      <!-- 12 draggable tools -->
       <div class="draggable" data-value="1">1</div>
       <div class="draggable" data-value="2">2</div>
       <div class="draggable" data-value="3">3</div>
