--- a/Toybox-2/index.html
+++ b/Toybox-2/index.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ground Toybox</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="top-left-controls">
-    <button onclick="goToMap()">🗺️ Progress Map</button>
-    <button onclick="saveAndExit()">💾 Save & Exit</button>
+    <button onclick="goToMap()">🗺️ Map</button>
+    <button onclick="saveAndExit()">💾 Exit</button>
   </div>
 
   <h1>🌱 Ground Toybox</h1>
-  <p class="description">Grow crops for the community. Pick 3 essentials from the toolbox. Not everything belongs in the soil.</p>
+  <p>Pick 3 essentials from the toolbox. Not everything belongs in the soil.</p>
 
   <div id="game-container">
     <div id="game-area">
@@ -27,25 +26,22 @@
 
     <div id="toolbox">
       <p>Toolbox:</p>
-      <img id="seed" src="assets/grow/seed.png" class="draggable" draggable="true" title="Seed" />
-      <img id="water-can" src="assets/grow/water-can.png" class="draggable" draggable="true" title="Watering Can" />
-      <img id="sun" src="assets/grow/sun.png" class="draggable" draggable="true" title="Sunlight" />
-      <img id="cola" src="assets/grow/cola.png" class="draggable" draggable="true" title="Can of Cola" />
-      <img id="flatscreen" src="assets/grow/flatscreen.png" class="draggable" draggable="true" title="Flat Screen TV" />
+      <img id="seed" src="assets/grow/seed.png" class="draggable" draggable="true" />
+      <img id="water-can" src="assets/grow/water-can.png" class="draggable" draggable="true" />
+      <img id="sun" src="assets/grow/sun.png" class="draggable" draggable="true" />
+      <img id="cola" src="assets/grow/cola.png" class="draggable" draggable="true" />
+      <img id="flatscreen" src="assets/grow/flatscreen.png" class="draggable" draggable="true" />
     </div>
   </div>
 
-  <div id="xp-counter">
-    XP: <span id="xp-value">--</span>
-  </div>
+  <div id="xp-counter">XP: <span id="xp-value">--</span></div>
 
   <div id="completion-buttons" style="display: none;">
     <button id="btn-continue">Continue</button>
     <button id="btn-exit">Exit</button>
   </div>
 
-  <script src="config.js"></script>
   <script src="../playerState.js"></script>
-  <script src="game.js?v=mobile2"></script>
+  <script src="game.js"></script>
 </body>
 </html>
