--- a/Toybox-2/index.html
+++ b/Toybox-2/index.html
@@ -70,20 +70,21 @@
       <div class="cell" data-index="9"></div>
       <div class="cell" data-index="10"></div>
       <div class="cell" data-index="11"></div>
-      <!-- Row 4: indices 12-17 -->
-      <div class="cell" data-index="12"></div>
-      <div class="cell" data-index="13"></div>
-      <div class="cell" data-index="14"></div>
-      <div class="cell" data-index="15"></div>
-      <div class="cell" data-index="16"></div>
-      <div class="cell" data-index="17"></div>
-      <!-- Row 3 (valid drop zones): indices 18-23 -->
-      <div class="cell drop-zone" data-index="18"></div>  <!-- A3 -->
-      <div class="cell drop-zone" data-index="19"></div>  <!-- B3 -->
-      <div class="cell drop-zone" data-index="20"></div>  <!-- C3 -->
-      <div class="cell drop-zone" data-index="21"></div>  <!-- D3 -->
-      <div class="cell drop-zone" data-index="22"></div>  <!-- E3 -->
-      <div class="cell drop-zone" data-index="23"></div>  <!-- F3 -->
+
+      <!-- Three larger drop zones -->
+      <div class="drop-zone-container">
+        <div class="cell drop-zone" data-index="18"></div>
+        <div class="cell drop-zone" data-index="19"></div>
+      </div>
+      <div class="drop-zone-container">
+        <div class="cell drop-zone" data-index="20"></div>
+        <div class="cell drop-zone" data-index="21"></div>
+      </div>
+      <div class="drop-zone-container">
+        <div class="cell drop-zone" data-index="22"></div>
+        <div class="cell drop-zone" data-index="23"></div>
+      </div>
+
       <!-- Row 2: indices 24-29 -->
       <div class="cell" data-index="24"></div>
       <div class="cell" data-index="25"></div>
@@ -103,16 +104,21 @@
     <!-- Toolbox with assets; note that assets should be resized via CSS to 54x54 (or adjusted as per portrait/landscape rules) -->
     <div id="toolbox">
       <img class="draggable" src="assets/grow/seed.png" data-id="seed" title="Seed" />
-      <img class="draggable" src="assets/grow/water-can.png" data-id="water-can" title="Watering Can" />
-      <img class="draggable" src="assets/grow/sun.png" data-id="sun" title="Sunlight" />
-      <img class="draggable" src="assets/grow/cola.png" data-id="cola" title="Can of Cola" />
-      <img class="draggable" src="assets/grow/flatscreen.png" data-id="flatscreen" title="Flat Screen TV" />
     </div>
 
     <!-- Result area (initially hidden) -->
     <div id="result-box" style="display:none;">
       <h2 id="result-text"></h2>
       <button id="btn-continue">Continue</button>
+    </div>
+
+    <!-- Result Modal -->
+    <div id="result-modal" class="modal hidden">
+      <div class="modal-content">
+        <h2 id="modal-result-text"></h2>
+        <button id="btn-try-again">Try Again</button>
+        <button id="btn-continue-3">Continue to Toybox 3</button>
+      </div>
     </div>
   </div>
 
