Your message here

--- a/Toybox-2/index.html
+++ b/Toybox-2/index.html
@@ -71,6 +71,14 @@
       <div class="cell" data-index="10"></div>
       <div class="cell" data-index="11"></div>
 
+      <!-- Row 4: indices 12-17 -->
+      <div class="cell" data-index="12"></div>
+      <div class="cell" data-index="13"></div>
+      <div class="cell" data-index="14"></div>
+      <div class="cell" data-index="15"></div>
+      <div class="cell" data-index="16"></div>
+      <div class="cell" data-index="17"></div>
+
       <!-- Three larger drop zones -->
       <div class="drop-zone-container">
         <div class="cell drop-zone" data-index="18"></div>
@@ -104,6 +112,10 @@
     <!-- Toolbox with assets; note that assets should be resized via CSS to 54x54 (or adjusted as per portrait/landscape rules) -->
     <div id="toolbox">
       <img class="draggable" src="assets/grow/seed.png" data-id="seed" title="Seed" />
+      <img class="draggable" src="assets/grow/water-can.png" data-id="water-can" title="Watering Can" />
+      <img class="draggable" src="assets/grow/sun.png" data-id="sun" title="Sunlight" />
+      <img class="draggable" src="assets/grow/cola.png" data-id="cola" title="Can of Cola" />
+      <img class="draggable" src="assets/grow/flatscreen.png" data-id="flatscreen" title="Flat Screen TV" />
     </div>
 
     <!-- Result area (initially hidden) -->
