--- a/Toybox-2/index.html
+++ b/Toybox-2/index.html
@@ -57,56 +57,68 @@
     <div id="grid-board">
       <!-- Generate 36 cells; mark valid drop zones (row 3, indices 18-23) with extra class "drop-zone" -->
       <!-- Row 6 (top row): indices 0-5 -->
-      <div class="cell" data-index="0"></div>
-      <div class="cell" data-index="1"></div>
-      <div class="cell" data-index="2"></div>
-      <div class="cell" data-index="3"></div>
-      <div class="cell" data-index="4"></div>
-      <div class="cell" data-index="5"></div>
+      <div class="row">
+        <div class="cell" data-index="0"></div>
+        <div class="cell" data-index="1"></div>
+        <div class="cell" data-index="2"></div>
+        <div class="cell" data-index="3"></div>
+        <div class="cell" data-index="4"></div>
+        <div class="cell" data-index="5"></div>
+      </div>
       <!-- Row 5: indices 6-11 -->
-      <div class="cell" data-index="6"></div>
-      <div class="cell" data-index="7"></div>
-      <div class="cell" data-index="8"></div>
-      <div class="cell" data-index="9"></div>
-      <div class="cell" data-index="10"></div>
-      <div class="cell" data-index="11"></div>
+      <div class="row">
+        <div class="cell" data-index="6"></div>
+        <div class="cell" data-index="7"></div>
+        <div class="cell" data-index="8"></div>
+        <div class="cell" data-index="9"></div>
+        <div class="cell" data-index="10"></div>
+        <div class="cell" data-index="11"></div>
+      </div>
 
       <!-- Row 4: indices 12-17 -->
-      <div class="cell" data-index="12"></div>
-      <div class="cell" data-index="13"></div>
-      <div class="cell" data-index="14"></div>
-      <div class="cell" data-index="15"></div>
-      <div class="cell" data-index="16"></div>
-      <div class="cell" data-index="17"></div>
+      <div class="row">
+        <div class="cell" data-index="12"></div>
+        <div class="cell" data-index="13"></div>
+        <div class="cell" data-index="14"></div>
+        <div class="cell" data-index="15"></div>
+        <div class="cell" data-index="16"></div>
+        <div class="cell" data-index="17"></div>
+      </div>
 
       <!-- Three larger drop zones -->
-      <div class="drop-zone-container">
-        <div class="cell drop-zone" data-index="18"></div>
-        <div class="cell drop-zone" data-index="19"></div>
-      </div>
-      <div class="drop-zone-container">
-        <div class="cell drop-zone" data-index="20"></div>
-        <div class="cell drop-zone" data-index="21"></div>
-      </div>
-      <div class="drop-zone-container">
-        <div class="cell drop-zone" data-index="22"></div>
-        <div class="cell drop-zone" data-index="23"></div>
+      <div class="row">
+        <div class="drop-zone-container">
+          <div class="cell drop-zone" data-index="18"></div>
+          <div class="cell drop-zone" data-index="19"></div>
+        </div>
+        <div class="drop-zone-container">
+          <div class="cell drop-zone" data-index="20"></div>
+          <div class="cell drop-zone" data-index="21"></div>
+        </div>
+        <div class="drop-zone-container">
+          <div class="cell drop-zone" data-index="22"></div>
+          <div class="cell drop-zone" data-index="23"></div>
+        </div>
       </div>
 
       <!-- Row 2: indices 24-29 -->
-      <div class="cell" data-index="24"></div>
-      <div class="cell" data-index="25"></div>
-      <div class="cell" data-index="26"></div>
-      <div class="cell" data-index="27"></div>
-      <div class="cell" data-index="28"></div>
-      <div class="cell" data-index="29"></div>
+      <div class="row">
+        <div class="cell" data-index="24"></div>
+        <div class="cell" data-index="25"></div>
+        <div class="cell" data-index="26"></div>
+        <div class="cell" data-index="27"></div>
+        <div class="cell" data-index="28"></div>
+        <div class="cell" data-index="29"></div>
+      </div>
       <!-- Row 1 (bottom row): indices 30-35 -->
-      <div class="cell" data-index="30"></div>
-      <div class="cell" data-index="31"></div>
-      <div class="cell" data-index="32"></div>
-      <div class="cell" data-index="33"></div>
-      <div class="cell" data-index="34"></div>
-      <div class="cell" data-index="35"></div>
+      <div class="row">
+        <div class="cell" data-index="30"></div>
+        <div class="cell" data-index="31"></div>
+        <div class="cell" data-index="32"></div>
+        <div class="cell" data-index="33"></div>
+        <div class="cell" data-index="34"></div>
+        <div class="cell" data-index="35"></div>
+      </div>
     </div>
 
     <!-- Toolbox with assets; note that assets should be resized via CSS to 54x54 (or adjusted as per portrait/landscape rules) -->
