Your message here

--- a/Toybox-2/index.html
+++ b/Toybox-2/index.html
@@ -43,7 +43,7 @@
   <!-- Intro Modal -->
   <div id="intro-modal" class="modal">
     <div class="modal-content">
-      <h1>🌱 Ground Toybox 3</h1>
+      <h1>🌱 Ground Toybox 4</h1>
       <p>Grow crops for the community.<br>Pick 3 essentials from the toolbox.<br>Not everything belongs in the soil.</p>
       <button id="start-button">Continue</button>
     </div>
@@ -77,12 +77,12 @@
       <div class="cell" data-index="16"></div>
       <div class="cell" data-index="17"></div>
       <!-- Row 3 (valid drop zones): indices 18-23 -->
-      <div class="cell drop-zone" data-index="18" data-group="1"></div>
-      <div class="cell drop-zone" data-index="19" data-group="1"></div>
-      <div class="cell drop-zone" data-index="20" data-group="2"></div>
-      <div class="cell drop-zone" data-index="21" data-group="2"></div>
-      <div class="cell drop-zone" data-index="22" data-group="3"></div>
-      <div class="cell drop-zone" data-index="23" data-group="3"></div>
+      <div class="cell" data-index="18"></div>
+      <div class="cell drop-zone" data-index="19">DROP</div>  <!-- B3 -->
+      <div class="cell drop-zone" data-index="20">DROP</div>  <!-- C3 -->
+      <div class="cell drop-zone" data-index="21">DROP</div>  <!-- D3 -->
+      <div class="cell" data-index="22"></div>
+      <div class="cell" data-index="23"></div>
       <!-- Row 2: indices 24-29 -->
       <div class="cell" data-index="24"></div>
       <div class="cell" data-index="25"></div>
