--- a/Toybox-2/index.html
+++ b/Toybox-2/index.html
@@ -43,7 +43,7 @@
   <!-- Intro Modal -->
   <div id="intro-modal" class="modal">
     <div class="modal-content">
-      <h1>🌱 Ground Toybox 10</h1>
+      <h1>🌱 Ground Toybox 11</h1>
       <p>Grow crops for the community.<br>Pick 3 essentials from the toolbox.<br>Not everything belongs in the soil.</p>
       <button id="start-button">Continue</button>
     </div>
@@ -119,7 +119,7 @@
       <div class="modal-content">
         <h2 id="modal-result-text"></h2>
         <button id="btn-try-again">Try Again</button>
-        <button id="btn-continue-3">Continue to Toybox 3</button>
+        <button id="btn-return-map">Return to Map</button>
       </div>
     </div>
   </div>
