--- a/Toybox-3/index.html
+++ b/Toybox-3/index.html
@@ -2,102 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <title>GVA Portrait Mobile Lock</title>
-  <link rel="manifest" href="manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <title>Toybox-3M – Light Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  
-
-  <div id="game-container">
-    <div id="grid-board">
-      <!-- 6x6 = 36 drop zones -->
-      <div class="cell" data-index="0"></div>
-      <div class="cell" data-index="1"></div>
-      <div class="cell" data-index="2"></div>
-      <div class="cell" data-index="3"></div>
-      <div class="cell" data-index="4"></div>
-      <div class="cell" data-index="5"></div>
-      <div class="cell" data-index="6"></div>
-      <div class="cell" data-index="7"></div>
-      <div class="cell" data-index="8"></div>
-      <div class="cell" data-index="9"></div>
-      <div class="cell" data-index="10"></div>
-      <div class="cell" data-index="11"></div>
-      <div class="cell" data-index="12"></div>
-      <div class="cell" data-index="13"></div>
-      <div class="cell" data-index="14"></div>
-      <div class="cell" data-index="15"></div>
-      <div class="cell" data-index="16"></div>
-      <div class="cell" data-index="17"></div>
-      <div class="cell" data-index="18"></div>
-      <div class="cell" data-index="19"></div>
-      <div class="cell" data-index="20"></div>
-      <div class="cell" data-index="21"></div>
-      <div class="cell" data-index="22"></div>
-      <div class="cell" data-index="23"></div>
-      <div class="cell" data-index="24"></div>
-      <div class="cell" data-index="25"></div>
-      <div class="cell" data-index="26"></div>
-      <div class="cell" data-index="27"></div>
-      <div class="cell" data-index="28"></div>
-      <div class="cell" data-index="29"></div>
-      <div class="cell" data-index="30"></div>
-      <div class="cell" data-index="31"></div>
-      <div class="cell" data-index="32"></div>
-      <div class="cell" data-index="33"></div>
-      <div class="cell" data-index="34"></div>
-      <div class="cell" data-index="35"></div>
-    </div>
-
-    <div id="toolbox">
-      <!-- 12 draggable tools -->
-      <div class="draggable" data-value="1">1</div>
-      <div class="draggable" data-value="2">2</div>
-      <div class="draggable" data-value="3">3</div>
-      <div class="draggable" data-value="4">4</div>
-      <div class="draggable" data-value="5">5</div>
-      <div class="draggable" data-value="6">6</div>
-      <div class="draggable" data-value="7">7</div>
-      <div class="draggable" data-value="8">8</div>
-      <div class="draggable" data-value="9">9</div>
-      <div class="draggable" data-value="10">10</div>
-      <div class="draggable" data-value="11">11</div>
-      <div class="draggable" data-value="12">12</div>
-    </div>
-
-    <div id="result-box" style="display:none;">
-      <h2 id="result-text">✅ You placed all 12 items!</h2>
-      <button id="try-again">Try Again</button>
+  <!-- Intro Modal -->
+  <div id="intro-modal" class="modal">
+    <div class="modal-content">
+      <h1>🌱 Light Toybox</h1>
+      <p>Generate light for the community.<br>Pick 3 essentials from the toolbox.<br>Not everything creates light.</p>
+      <button id="start-button">Continue</button>
     </div>
   </div>
 
-  <script src="game.js"></script>
-  <script>
-    function setAppHeight() {
-      const vh = window.innerHeight * 0.01;
-      document.documentElement.style.setProperty('--vh', `${vh}px`);
-      document.getElementById('game-container').style.height = `${window.innerHeight}px`;
-    }
-
-    setAppHeight();
-    window.addEventListener('resize', setAppHeight);
-
-    window.addEventListener('load', () => {
-      setTimeout(() => window.scrollTo(0, 1), 10);
-    });
-
-    if (/Samsung S6/i.test(navigator.userAgent)) {
-      document.body.classList.add('samsung-s6');
-    }
-  </script>
+  <!-- XP Counter -->
   <div id="xp-bar">XP: <span id="xp-value">--</span></div>
 
-  <div id="completion-buttons" style="display: none;">
-    <button onclick="goToNext()">✅ Continue</button>
-    <button onclick="goToMap()">🗺️ Map</button>
+  <!-- Game Container -->
+  <div id="game-container" class="hidden">
+    <div id="grid-board">
+      <!-- 6x6 Grid: 36 cells -->
+      ${[...Array(36).keys()].map(i => `<div class="cell" data-index="${i}"></div>`).join('')}
+    </div>
+
+    <!-- 3 Drop Zone Guides -->
+    <div class="drop-guide" id="dropzone1"></div>
+    <div class="drop-guide" id="dropzone2"></div>
+    <div class="drop-guide" id="dropzone3"></div>
+
+    <!-- Toolbox Items -->
+    <div id="toolbox">
+      <img class="draggable" src="assets/light/sun.png" data-id="sun" />
+      <img class="draggable" src="assets/light/converter.png" data-id="converter" />
+      <img class="draggable" src="assets/light/light-bulb.png" data-id="light-bulb" />
+      <img class="draggable" src="assets/light/pizza.png" data-id="pizza" />
+      <img class="draggable" src="assets/light/cardboard-box.png" data-id="cardboard-box" />
+    </div>
+
+    <!-- Result Area -->
+    <div id="result-box" style="display:none;">
+      <h2 id="result-text"></h2>
+      <button id="btn-continue">Continue to Toybox 4</button>
+    </div>
   </div>
+
+  <!-- Scripts -->
+  <script src="../playerState.js"></script>
+  <script src="game.js"></script>
+  <script>
+    document.getElementById('start-button').addEventListener('click', () => {
+      document.getElementById('intro-modal').classList.add('hidden');
+      document.getElementById('game-container').classList.remove('hidden');
+    });
+  </script>
 </body>
 </html>
